finished v2, fixed spacing, colors and all styles for responsive designs

--- a/src/Components/CustomizedAccordions/CustomizedAccordions.scss
+++ b/src/Components/CustomizedAccordions/CustomizedAccordions.scss
@@ -1,6 +1,9 @@
 @use "../../styles/partials/mixins" as *;
 
 .accordion {
+  @include desktop {
+  }
+
   &__photo-container {
     display: flex;
     justify-content: center;
